our name is knight

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	email = ipfs-libraries@libraries
-	name = ipfs-libraries
+	email = knight@libraries
+	name = knight
 
 # git config --local include.path ../.gitconfig
